# SenBoy

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  README.txt  index.html  params.json
.github/workflows/: codeql-analysis.yml
SenBoy/: Cartridge.inl  CommandLine.hpp  Common.cpp  Common.hpp  GBAudioStream.hpp  GPU.cpp  GPU.hpp  LR35902.cpp  LR35902.hpp  LR35902Instr.inl  MMU.cpp  MMU.hpp  QSFMLCanvas.cpp  QSFMLCanvas.hpp  SenBoy.pro  debugwindow.ui  debugwindow.ui.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui
ext/Gb_Snd_Emu-0.1.4/boost/: cstdint.hpp
ext/discord-rpc/: .gitignore
ext/imgui/: imconfig.h
saves/: README.txt
src/: Cartridge.cpp  Cartridge.hpp  Cartridge.inl  Common.hpp  GBAudioStream.hpp  GPU.cpp  GPU.hpp  LR35902.cpp  LR35902.hpp  LR35902Instr.inl  LR35902InstrData.cpp  MMU.cpp  MMU.hpp  ROM.hpp  SFMLMain.cpp  SenBoy.cpp  SenBoy.hpp  Z80.cpp  Z80.hpp  Z80Instr.inl  main.cpp  wxSFMLCanvas.cpp  wxSFMLCanvas.hpp
src/Analysis/: Analyser.hpp
src/Core/: Cartridge.cpp  Cartridge.hpp  Cartridge.inl  GPU.cpp  GPU.hpp  GameBoy.hpp  LR35902.cpp  LR35902.hpp  LR35902Instr.inl  LR35902InstrData.cpp  MMU.cpp  MMU.hpp
src/Tools/: Color.hpp  Common.hpp  Config.cpp  Config.hpp  Hexadecimal.hpp
test/: CPUPerfTest.cpp  PerfTest.cpp  Screenshot.cpp
web/: Main.cpp  README.md  build.bat  build_wasm.bat
web/build_wasm/: index.js  index.wasm
web/www/: index.html  style.css
web/www/js/: bios.js  loadrom.js  save.js  soundcontrol.js
web/www/roms/: Witness, The (PD) [M].gb
